src/main/java/org/example/ordersystem/Errors/GlobalControllerAdvice.java
package org.example.ordersystem.Errors;

import org.springframework.web.bind.annotation.ControllerAdvice;

@ControllerAdvice
class GlobalControllerAdvice {

}
